# project-sensor

./: CMakeLists.txt  sdkconfig
components/DHT11/: CMakeLists.txt  DHT11.c
components/DHT11/include/: DHT11.h
components/SG90/: CMakeLists.txt  SG90.c
components/SG90/include/: SG90.h
main/: CMakeLists.txt  app_main.c  idf_component.yml  main_lastversion.c  thingspeak_ca.crt
